--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="logo2.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sp advertising</title>
+    <title>Sp Advertising</title>
       <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
        <script type="text/javascript">
       (function (l) {
