--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="logo2.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sp Advertising</title>
+    <meta name="description" content="One of the most creative and well-established advertising agency in Raipur. With SP Advertising, Make your brand live better." />
+    <meta name="keywords" content="" />
+    <title>Top Advertising Agency in Raipur & Chhattisgarh</title>
       <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
-  <div id="preloading" style="width:100%; height:100vh; display:flex; justify-content:center; align-items:center;"> <img style="width:100px; height:100px;" src="logo2.webp" alt="Loading..."></div>
+  <div id="preloading" style="width:100%; height:100vh; position:fixed;  z-index:101; display:flex; flex-direction: column; justify-content:center; align-items:center;"> <img style="width:100px; height:100px; position:relative; top:50px; left:10px;" src="logo2.webp" alt="Loading..."><img style="width:150px; height:150px;" src="circle.gif" alt="Loading..."></div>
     <div id="root"></div>
     <script>
       const preloading = document.getElementById('preloading');
